fix code theo new db

--- a/EXE201/efpt.config.json
+++ b/EXE201/efpt.config.json
@@ -47,6 +47,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[News]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Notification]",
          "ObjectType": 0
       },
