--- a/EXE201/appsettings.json
+++ b/EXE201/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "EXE201.Controllers.PayOSController": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -21,5 +22,5 @@
     "CancelUrl": "https://dalattour.vercel.app/",
     "ReturnUrl": "https://dalattour.vercel.app/"
   }
-  
+
 }
